fixed aspect ratio for image on mobile

--- a/src/styles/Datasets.css
+++ b/src/styles/Datasets.css
@@ -30,11 +30,18 @@
   text-align: center;
 }
 
-#imageMain {
+#imageDatasets {
   background-size: cover !important;
   background-position: center center;
   background-attachment: fixed;
   filter: brightness(80%) !important;
+}
+
+@media only screen and (max-width: 400px) {
+  #imageDatasets {
+    width: 375px;
+    object-fit: cover;
+  }
 }
 
 #search-box {
